--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['build']) {
     }
 
     node {
-        name "CN=Inverstor2,O=NodeD"
+        name "CN=Investor2,O=NodeD"
         advertisedServices = []
         p2pPort 10014
         rpcPort 10015
