--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['build']) {
         rpcUsers = [[ user: "user1", "password": "test", "permissions": []]]
     }
 
-    node {
+    node {tr
         name "CN=UH00002,O=NodeD"
         advertisedServices = []
         p2pPort 10014
